[package]
name = "inori_bot"
version = "0.1.0"
authors = ["xXJadeRabbitXx <yuheng.99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.10.5", features = ["client", "gateway", "model", "rustls_backend"]}
